# E-Commerce

./: .gitignore  Pipfile  data.json  db.sqlite3  manage.py  pyproject.toml  requirements.txt  seeddata.json
Backend/: db.sqlite3
Backend/api/: urls.py  views.py
Backend/backend/: settings.py  urls.py
api/: models.py  serializers.py  signals.py  urls.py  views.py
api/migrations/: 0001_initial.py  0002_alter_product_image.py  0003_review_comment.py  0004_review_createdat.py
backend/: .env  development.py  production.py  settings.py  urls.py
backend/settings/: development.py  production.py
frontend/: .gitignore  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js  index.css  index.js  store.js
frontend/src/actions/: cartActions.js  productAction.js  userAction.js
frontend/src/components/: Footer.js  FormContainer.js  Header.js  Loader.js  Message.js  Paginate.js  Product.js  ProductCarousel.js  Rating.js  SearchBox.js
frontend/src/constants/: productConstants.js  userConstants.js
frontend/src/reducers/: cartReducers.js  productReducers.js  userReducers.js
frontend/src/screens/: CartScreen.js  HomeScreen.js  LoginScreen.js  ProductDetail.js  ProductEditScreen.js  ProductListScreen.js  ProfileScreen.js  RegisterScreen.js  UserEditScreen.js  UserListScreen.js
