[tool.poetry]
name = "ecommerce_project"
version = "0.1.0"
description = ""
authors = ["ShyamSundhar1411 <clashwithchiefrpjyt@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.4"
Pillow = "^8.2.0"
django-rest-framework = "^0.1.0"
django-cors-headers = "^3.7.0"
djangorestframework-simplejwt = "^4.7.1"
django-environ = "^0.4.5"
dj-database-url = "^0.5.0"
whitenoise = "^5.2.0"
gunicorn = "^20.1.0"
cloudinary = "^1.25.0"
django-cloudinary-storage = "^0.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
